More tests. Small refactorings.